Was able to fix the overflow problem with the patient selector
Added overflow:visible to the app-header element.

--- a/src/containers/app/app.css
+++ b/src/containers/app/app.css
@@ -1,5 +1,6 @@
 .frame {
   bottom: -7rem;
+  overflow: visible;
 }
 
 .frame.header {
